CSS fix for page settings menu on smaller screens

--- a/src/css/boom/page/settings.less
+++ b/src/css/boom/page/settings.less
@@ -11,7 +11,7 @@
 		width: 33%;
 		float: left;
 		box-sizing: border-box;
-		padding: 0 15rem 0 0;
+		padding: 0 10% 0 0;
 		margin: -0.75em 0;
 
 		li {
@@ -24,7 +24,7 @@
 				left: 0;
 				top: 12px;
 			}
-			
+
 			&.b-page-settings-close {
 				margin-top: 2em;
 			}
@@ -91,7 +91,7 @@
 		textarea {
 			width: 40em;
 		}
-		
+
 		#visible-to {
 			display: inline-block;
 		}
